# typescribe-handwriting

./: .gitignore  README.md  pyproject.toml
examples/: sample.txt
src/handwriting_synthesis/: __init__.py  alphabet.py  cli.py  config.py  page_layouts.py  preprocessing.py  rendering.py  strokes.py  synthesizer.py
src/handwriting_synthesis/network/: __init__.py  attention_cell.py  layers.py  model.py  sampling.py
